# graphtty

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
samples/book-writer-agent/: graph.json
samples/call-graph/: graph.json
samples/code-review/: graph.json
samples/deep-agent/: graph.json
samples/etl-pipeline/: graph.json
samples/function-agent/: graph.json
samples/langgraph/: README.md  example.py
samples/orchestrator-agent/: graph.json
samples/rag-pipeline/: graph.json
samples/react-agent/: graph.json
samples/supervisor-agent/: graph.json
samples/travel-rag-agent/: graph.json
samples/workflow-agent/: graph.json
samples/world-map/: graph.json
scripts/: benchmark.py  generate_screenshots.py  profile_render.py
src/graphtty/: __init__.py  __main__.py  canvas.py  layout.py  renderer.py  themes.py  truncate.py  types.py
tests/: test_canvas.py  test_cli.py  test_renderer.py  test_themes.py  test_truncate.py
